# atak-airguardian-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  index.ts  main.py  package.json  pyproject.toml  radar.ts  schemas.py  setup.sh  test_mtls_client.py
.github/workflows/: build.yml
app/: celery_app.py  config.py  main.py  opensky_auth.py
app/api/: __init__.py  description.py  healthcheck.py  mock_api.py  radar_api.py
app/schemas/: schema.py  schema_fin_marine_traffic.py  schema_marine_traffic.py  schema_openSky.py
app/tasks/: generater_task.py  marine_traffic_task.py  practice_task.py  radar_task.py  task_FinMarine_traffic.py
docker/: container-init.sh  entrypoint.sh
schemas/: Ilmavalvontaseloste.py
tests/: test_aircraft_api.py  test_api_data.py  test_practice_data.py
