[tool.poetry]
name = "test-radar"
version = "0.1.0"
description = "Finland Aircraft Tracker API with mTLS support"
authors = ["Eagle <eagle@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.120.0"
uvicorn = "^0.38.0"
python-dotenv = "^1.2.1"
httpx = "^0.28.1"
requests = "^2.32.5"
pydantic-settings = "^2.11.0"
mgrs = "^1.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
ruff = "^0.14.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
