[tool.poetry]
name = "airguard-api"
version = "0.1.0"
description = "Finland Aircraft Tracker API with mTLS support"
authors = ["Eagle <eagle@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.black]
line-length = 120
target-version = ['py311']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  |  __pycache__
)
'''

[tool.mypy]
strict = true

[tool.pytest.ini_options]
junit_family = "xunit2"
addopts = "--cov=rmmtxauthz --cov-fail-under=0 --cov-branch"
asyncio_mode = "strict"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-parents = 10

[tool.pylint.messages_control]
disable = ["fixme", "W1202", "C0209"]

[tool.pylint.similarities]
min-similarity-lines = 8
ignore-imports = true

[tool.coverage.run]
omit = ["tests/*"]
branch = true


[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["standard"], version = "^0.124.2" }
uvicorn = "^0.38.0"
python-dotenv = "^1.2.1"
httpx = "^0.28.1"
requests = "^2.32.5"
pydantic-settings = "^2.11.0"
mgrs = "^1.4.6"
libpvarki = { git = "https://github.com/pvarki/python-libpvarki.git", tag = "2.1.0" }
packaging = "^25.0"
bandit = "^1.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
coverage = "^7.4"
pytest-cov = "^4.1"
pylint = "^3.3"
black = "^25.1"
bandit = "^1.8"
mypy = "^1.15"
pre-commit = "^3.6"
pytest-asyncio = ">=0.21,<1.0" # caret behaviour on 0.x is to lock to 0.x.*
bump2version = "^1.0"
detect-secrets = "^1.5"
httpx = ">=0.28.1,<1.0"
ruff = "^0.14.2"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
